--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -8,8 +8,7 @@
 >
   <!-- Sun icon -->
   <svg
-    id="theme-toggle-light-icon"
-    class="w-5 h-5 hidden"
+    class="w-5 h-5 invisible dark:visible"
     fill="currentColor"
     viewBox="0 0 20 20"
     xmlns="http://www.w3.org/2000/svg"
@@ -20,8 +19,7 @@
   </svg>
   <!-- Moon icon -->
   <svg
-    id="theme-toggle-dark-icon"
-    class="w-5 h-5 hidden"
+    class="w-5 h-5 visible dark:invisible"
     fill="black"
     viewBox="0 0 20 20"
     xmlns="http://www.w3.org/2000/svg"
@@ -31,20 +29,7 @@
 </button>
 
 <script>
-  const themeToggleDarkIcon = document.getElementById('theme-toggle-dark-icon');
-  const themeToggleLightIcon = document.getElementById('theme-toggle-light-icon');
   const themeToggleBtn = document.getElementById('theme-toggle');
-
-  // Change the icons inside the button based on previous settings
-  function updateThemeToggle() {
-    if (document.documentElement.classList.contains('dark')) {
-      themeToggleLightIcon?.classList.remove('hidden');
-      themeToggleDarkIcon?.classList.add('hidden');
-    } else {
-      themeToggleLightIcon?.classList.add('hidden');
-      themeToggleDarkIcon?.classList.remove('hidden');
-    }
-  }
 
   // Initialize theme
   if (
@@ -57,8 +42,6 @@
     document.documentElement.classList.remove('dark');
   }
 
-  updateThemeToggle();
-
   // Watch system theme changes
   window
     .matchMedia('(prefers-color-scheme: dark)')
@@ -69,14 +52,17 @@
         } else {
           document.documentElement.classList.remove('dark');
         }
-        updateThemeToggle();
       }
     });
 
-  // Toggle theme
-  themeToggleBtn?.addEventListener('click', () => {
-    const isDark = document.documentElement.classList.toggle('dark');
-    localStorage.setItem('theme', isDark ? 'dark' : 'light');
-    updateThemeToggle();
+  themeToggleBtn?.addEventListener('click', function() {
+    // Toggle theme
+    if (document.documentElement.classList.contains('dark')) {
+      document.documentElement.classList.remove('dark');
+      localStorage.setItem('theme', 'light');
+    } else {
+      document.documentElement.classList.add('dark');
+      localStorage.setItem('theme', 'dark');
+    }
   });
 </script>
