feat: Add favicon links to Layout.astro

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -69,7 +69,12 @@ const schemaOrgData = {
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-
+<!-- Favicon -->
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
     <GoogleAnalytics />
 
     <!-- Prevent Flash of Wrong Theme -->
