--- a/src/pages/[lang]/services.astro
+++ b/src/pages/[lang]/services.astro
@@ -194,7 +194,7 @@ const pricing = translations?.pricing ?? defaultPricing;
                 </li>
               ))}
             </ul>
-            <Button text={pricing.cta} href="#contact" variant="primary" class="w-full" />
+            <Button text={pricing.cta} href={`/${lang}/get-in-touch`} variant="primary" class="w-full" />
           </div>
         </div>
 
@@ -225,7 +225,7 @@ const pricing = translations?.pricing ?? defaultPricing;
                 </li>
               ))}
             </ul>
-            <Button text={pricing.cta} href="#contact" variant="primary" class="w-full" />
+            <Button text={pricing.cta} href={`/${lang}/get-in-touch`} variant="primary" class="w-full" />
           </div>
         </div>
 
@@ -253,7 +253,7 @@ const pricing = translations?.pricing ?? defaultPricing;
                 </li>
               ))}
             </ul>
-            <Button text={pricing.cta} href="#contact" variant="primary" class="w-full" />
+            <Button text={pricing.cta} href={`/${lang}/get-in-touch`} variant="primary" class="w-full" />
           </div>
         </div>
       </div>
