--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -102,7 +102,12 @@ const supportOptions = [
               </span>
               <span dir="ltr" class={`${isRTL ? 'text-right' : 'text-left'}`}>{contactInfo.phone}</span>
             </a>
-            <a href={`mailto:${contactInfo.email}`} class="flex items-center space-x-3 text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400 transition-colors duration-300 group">
+            <a 
+              href="#" 
+              data-email={contactInfo.email}
+              class="flex items-center space-x-3 text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400 transition-colors duration-300 group"
+              onclick="window.location.href = 'mailto:' + this.dataset.email; return false;"
+            >
               <span class="w-8 h-8 rounded-lg bg-blue-50 dark:bg-gray-800 flex items-center justify-center group-hover:bg-blue-500">
                 <i class="fas fa-envelope text-blue-600 dark:text-blue-400 group-hover:text-white"></i>
               </span>
@@ -213,7 +218,12 @@ const supportOptions = [
             </a>
           </p>
           <p>
-            <a href={`mailto:${contactInfo.email}`} class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors duration-300">
+            <a 
+              href="#" 
+              data-email={contactInfo.email}
+              class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors duration-300"
+              onclick="window.location.href = 'mailto:' + this.dataset.email; return false;"
+            >
               {contactInfo.email}
             </a>
           </p>
