--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ const { pathname } = Astro.url;
 const lang = getLanguageFromURL(pathname);
 
 // Get the canonical URL safely
-const siteUrl = import.meta.env.SITE ?? 'https://veblabs.com';
+const siteUrl = new URL(Astro.url.pathname, import.meta.env.SITE ?? 'https://veblabs.com').origin;
 const canonicalURL = new URL(Astro.url.pathname, siteUrl);
 const imageUrl = new URL(image.startsWith('http') ? image : image, siteUrl).toString();
 
@@ -69,12 +69,67 @@ const schemaOrgData = {
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-<!-- Favicon -->
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
+    
+    <!-- Cloudflare optimizations -->
+    <meta http-equiv="Cache-Control" content="public, max-age=31536000" />
+    <meta name="cf-2fa-verify" content="true" />
+    <meta name="rocket-loader" content="enabled" />
+    
+    <!-- Resource hints for performance -->
+    <link rel="preconnect" href="https://veblabs.com" />
+    <link rel="dns-prefetch" href="https://veblabs.com" />
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin />
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com" />
+
+    <!-- Performance optimizations -->
+    <link rel="preload" as="style" href="/styles/critical.css" />
+    <link 
+      rel="preload" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
+      as="style"
+    />
+    <script is:inline>
+      // Load Font Awesome asynchronously
+      const fontAwesomeLink = document.querySelector('link[href*="font-awesome"]');
+      if (fontAwesomeLink) {
+        fontAwesomeLink.setAttribute('rel', 'stylesheet');
+      }
+    </script>
+    <noscript>
+      <link 
+        rel="stylesheet" 
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      />
+    </noscript>
+    <meta http-equiv="Cache-Control" content="max-age=31536000" />
+
+    <!-- Font optimization -->
+    <link
+      rel="preload"
+      href="/fonts/inter-var-latin.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+
+    <style is:inline>
+      /* Font optimization */
+      @font-face {
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 100 900;
+        font-display: swap;
+        src: url('/fonts/inter-var-latin.woff2') format('woff2');
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+      }
+    </style>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <GoogleAnalytics />
 
     <!-- Prevent Flash of Wrong Theme -->
@@ -194,8 +249,6 @@ const schemaOrgData = {
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body class="dark:bg-black min-h-screen flex flex-col">
     <Nav />
